ocaml/testsuite/tests/typing-layouts-gadt-sort-var/test.compilers.reference
File "insert.ml", line 5, characters 47-48:
5 | and packed = Gadt.Mk ((fun _ -> assert false), g)
                                                   ^
Error: This expression has type t_void -> unit
       but an expression was expected of type 'a -> unit
       The layout of t_void is void, because
         of the annotation on the declaration of the type t_void.
       But the layout of t_void must be a sublayout of value, because
         it's imported from another compilation unit.
